Updated front page to use twitter/bootstrap

--- a/src/App/UserBundle/Resources/views/Form/register_form.html.twig
+++ b/src/App/UserBundle/Resources/views/Form/register_form.html.twig
@@ -1,3 +1,5 @@
+{% form_theme form 'PageBundle:Front:form_theme.html.twig' %}
+
 <div>
 
     <form novalidate id="{{ form.vars.id }}" action="{{ path('register') }}" {{ form_enctype(form) }} method="post" class="clearfix" data-ajax="register">
