--- a/src/App/PageBundle/Resources/views/Front/front.html.twig
+++ b/src/App/PageBundle/Resources/views/Front/front.html.twig
@@ -1,109 +1,132 @@
-{% extends '::base.html.twig' %}
+<!DOCTYPE html>
+<html>
+<head>
+    {# Required on all pages#}
 
-{% block title %}{{ 'page.front.title'|trans }}{% endblock %}
 
-{% block javascript_header %}
-{{ parent() }}
-<script type="text/javascript">
+    <meta charset="UTF-8">
+    <title>{{ 'page.front.title'|trans }}</title>
 
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-30793556-1']);
-    _gaq.push(['_trackPageview']);
-    _gaq.push(['_trackPageLoadTime']);
+    {# Needed for responsive layout (Twitter's Bootstrap) #}
 
-    (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
 
-</script>
-{% endblock %}
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-{% block body %}
-{{ facebook_initialize({'xfbml': true, 'fbAsyncInit': 'App.facebookInit();'}) }}
-<script type="text/javascript">
-    App.facebookInit = function() {
-        FB.Event.subscribe('auth.statusChange', function(response) {
-            if (response.session || response.authResponse) {
-                window.location.href = "{{ path('facebook_check') }}";
-            }
-        });
-    }
-</script>
-<div id="front-page">
-    <div class="wrapper">
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+
+    {% javascripts
+      'bootstrap/js/bootstrap-typeahead.js'
+      'bootstrap/js/bootstrap-dropdown.js'
+      'bootstrap/js/bootstrap-button.js'
+      'js/jstz.min.js'
+      'js/front-page.js'
+      filter='?yui_js'
+      output='js-compiled/front-page.js'
+     %}
+    <script type="text/javascript" src="{{ asset_url }}"></script>
+    {% endjavascripts %}
+
+    <link rel="stylesheet" href="//symfony.servehttp.com:1337/bootstrap/less/bootstrap.less">
+    <link rel="stylesheet" href="//symfony.servehttp.com:1337/bootstrap/less/responsive.less">
+    <link rel="stylesheet" href="//symfony.servehttp.com:1337/less/front-page.less">
+
+</head>
+<body id="front-page">
+
+<div class="container-wrapper">
+    <div class="container main">
+        <div class="row">
+            <div class="span5">
+                <h1 class="hide">{{ site_name }}</h1>
+                <img src="http://symfony.servehttp.com/images/logo.png" height="57"/>
+                <h4 class="slogan">{{ 'page.front.motto'|trans }}</h4>
+
+                <div class="meet-message">
+                    {% if geoip is empty or geoip.city is empty %}
+                    {{ 'page.front.meet_your_area'|trans }}
+                    {% else %}
+                    {{ 'page.front.meet_your_city'|trans({'%city%':geoip.city}) }}
+                    {% endif %}
+                </div>
+            </div>
+            <div class="span7">
+                <div class="btn-group pull-right">
+                    <a href="" data-toggle="dropdown"
+                       class="btn dropdown-toggle">{{ lunetics_languageName(lunetics_getLocaleLanguage()) }} <span
+                            class="caret"></span></a>
+                    <ul class="dropdown-menu nav">
+                        {#<li class="nav-header">Possible guess</li>#}
+                        {#<li><a href>Српски</a></li>#}
+                        {#<li class="divider"></li>#}
+                        {% for locale_id in lunetics_availableLocales %}
+                        {% if locale_id == lunetics_getLocaleLanguage() %}
+                        <li class="active {{ locale_id }}"><a>{{ lunetics_languageName(locale_id) }}</a></li>
+                        {% else %}
+                        <li class="{{ locale_id }}"><a
+                                href="{{ path('LuneticsLocaleBundle_localeswitch', {_locale: locale_id}) }}">{{ lunetics_languageName(locale_id) }}</a>
+                        </li>
+                        {% endif %}
+                        {% endfor %}
+                    </ul>
+                </div>
+                {% include 'PageBundle:Front:login_form.html.twig' %}
+
+                {% include 'PageBundle:Front:register_form.html.twig' with {form:form_register} %}
+            </div>
+        </div>
+    </div>
+    <div class="bottom-wrapper">
         <div class="container">
-            <div class="content-wrapper clearfix">
-                <div class="content">
-                    <noscript>
-                        <div class="noscript">{{ 'page.front.javascript_required'|trans({'%site_name%':site_name}) }}</div>
-                    </noscript>
-                    <div class="language-wrapper">
-                        <div class="language">
-                            <a href="" id="language">{{ lunetics_languageName(lunetics_getLocaleLanguage()) }}</a>
-                        </div>
-                        <div id="language-swap" class="clearfix">
-                            <ul>
-                                {% for locale_id in lunetics_availableLocales %}
-                                {% if locale_id == lunetics_getLocaleLanguage() %}
-                                <li class="{{ locale_id }}"><span>{{ lunetics_languageName(locale_id) }}</span></li>
-                                {% else %}
-                                <li class="{{ locale_id }}"><a href="{{ path('LuneticsLocaleBundle_localeswitch', {_locale: locale_id}) }}">{{ lunetics_languageName(locale_id) }}</a></li>
-                                {% endif %}
-                                {% endfor %}
-                            </ul>
-                        </div>
+            <div class="row">
+                <div class="span3">
+                    <div class="row-fluid">
+                        <img src="/images/icon-happy.png" class="pull-left">
+                        <h4 class="title">Fun</h4>
+
+                        <p>Kurumi is all about having fun, playing games and visiting profiles.</p>
                     </div>
-                    <div class="left">
-                        <img src="{{ asset('images/logo.png') }}" height="57" />
-                        {{ 'page.front.motto'|trans }}
-                        <div class="message">
-                            {% if geoip is empty or geoip.city is empty %}
-                            {{ 'page.front.meet_your_area'|trans }}
-                            {% else %}
-                            {{ 'page.front.meet_your_city'|trans({'%city%':geoip.city}) }}
-                            {% endif %}
-                        </div>
+                </div>
+                <div class="span3">
+                    <div class="row-fluid">
+                        <img src="/images/icon-chat.png" class="pull-left">
+                        <h4 class="title">Chat</h4>
+
+                        <p>We promise you lots of people who are eager to have a chat.</p>
                     </div>
-                    <div class="right clearfix">
-                        <div class="login clearfix">
-                            <h2>{{ 'page.front.log_in'|trans }}</h2>
-                            {% include 'UserBundle:Form:login_form.html.twig' %}
-                        </div>
-                        <div class="register clearfix">
-                            <h2><strong>{{ 'page.front.first_time'|trans }}</strong> {{ 'page.front.join_now'|trans }}</h2>
-                            {% include 'UserBundle:Form:register_form.html.twig' with {form:form_register} %}
-                        </div>
+                </div>
+                <div class="span3">
+                    <div class="row-fluid">
+                        <img src="/images/icon-no-robots.png" class="pull-left">
+                        <h4 class="title">With real people</h4>
+
+                        <p>No fake profiles on Kurumi. You should feel safe and have lots of fun!</p>
+                    </div>
+                </div>
+                <div class="span3">
+                    <div class="row-fluid">
+                        <img src="/images/icon-new-people.png" class="pull-left">
+                        <h4 class="title">The rest is up to you</h4>
+
+                        <p>Kurumi is for everyone, so come on in and join the fun!</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="footer">
-        <div class="info">
-            <ul>
-                <li class="fun">
-                    <h3>Fun</h3>
-                    <p>Kurumi is all about having fun, playing games and visiting profiles.</p>
-                </li>
-                <li class="chat">
-                    <h3>Chat</h3>
-                    <p>We promise you lots of people who are eager to have a chat.</p>
-                </li>
-                <li class="real">
-                    <h3>With real people</h3>
-                    <p>No fake profiles on Kurumi. You should feel safe and have lots of fun!</p>
-                </li>
-                <li class="you">
-                    <h3>It's up to you</h3>
-                    <p>So what do you want to do? You decide!</p>
-                </li>
-            </ul>
-        </div>
+    <div class="footer-wrapper">
         <div class="container">
-            {{ facebook_login_button() }}
+            <ul class="nav nav-pills">
+                <li><img class="logo" src="/images/logo-gray.png" height="31" width="124"></li>
+                <li><a href>About</a></li>
+                <li><a href>Privacy</a></li>
+                <li><a href>Terms of use</a></li>
+                <li><a href>FAQ</a></li>
+                <li><a href>Contact</a></li>
+                <li class="pull-right"><span class="copyright">Copyright &copy; Silver Media Ltd.</span></li>
+            </ul>
         </div>
     </div>
 </div>
-{% endblock %}
+
+</body>
+</html>
