Tidied up the code

--- a/src/Kurumi/PageBundle/Resources/views/Front/register_form_theme.html.twig
+++ b/src/Kurumi/PageBundle/Resources/views/Front/register_form_theme.html.twig
@@ -14,6 +14,16 @@
 {% endspaceless %}
 {% endblock %}
 
+{% block form_errors %}
+{% spaceless %}
+{% if compound %}
+... form code ...
+{% else %}
+... field code ...
+{% endif %}
+{% endspaceless %}
+{% endblock form_errors %}
+
 {% block _user_register_profile_gender_widget %}
 {% spaceless %}
 <div class="input-prepend input-append">
