--- a/src/Kurumi/PageBundle/Resources/views/Front/register_form.html.twig
+++ b/src/Kurumi/PageBundle/Resources/views/Front/register_form.html.twig
@@ -1,4 +1,4 @@
-{% form_theme form 'PageBundle:Front:form_theme.html.twig' %}
+{% form_theme form 'PageBundle:Front:register_form_theme.html.twig' %}
 
 <form id="{{ form.vars.id }}" class="register-form well" action="{{ path('register') }}" {{ form_enctype(form) }}
       method="post">
