--- a/webroot/less/front-page.less
+++ b/webroot/less/front-page.less
@@ -26,6 +26,10 @@
         background: #4e526b;
         background: rgba(150, 151, 186, 0.4);
         border: none;
+
+        .register-header {
+            margin: 0;
+        }
     }
 }
 
