--- a/src/Kurumi/UserBundle/Resources/views/Form/register_form.html.twig
+++ b/src/Kurumi/UserBundle/Resources/views/Form/register_form.html.twig
@@ -1,4 +1,4 @@
-{% form_theme form 'PageBundle:Front:form_theme.html.twig' %}
+{% form_theme form 'PageBundle:Front:register_form_theme.html.twig' %}
 
 <div>
 
