--- a/webroot/less/front-page.less
+++ b/webroot/less/front-page.less
@@ -22,7 +22,7 @@
         }
     }
 
-    .register-form {
+    .register-form-container {
         background: #4e526b;
         background: rgba(150, 151, 186, 0.4);
         border: none;
