--- a/src/Kurumi/UserBundle/Resources/views/Form/register_form.html.twig
+++ b/src/Kurumi/UserBundle/Resources/views/Form/register_form.html.twig
@@ -1,31 +1,17 @@
-{% form_theme form 'PageBundle:Front:register_form_theme.html.twig' %}
+{% form_theme form 'UserBundle:Form:register_form_theme.html.twig' %}
 
-<div>
+<form novalidate id="{{ form.vars.id }}" class="register-form"
+      action="{{ path('register') }}" {{ form_enctype(form) }}
+      method="post" data-ajax>
 
-    <form novalidate id="{{ form.vars.id }}" action="{{ path('register') }}" {{ form_enctype(form) }} method="post" class="clearfix" data-ajax="register">
-        <dl>
-            <dt>{{ form_label(form.email,'form.register.email'|trans) }}</dt>
-            <dd class="email">{{ form_widget(form.email, {attr:{class:'text', autocomplete:'on'}}) }}
-                {{ form_errors(form.email) }}</dd>
-            <dt>{{ form_label(form.plainPassword, 'form.register.password'|trans({'%site_name%':site_name})) }}</dt>
-            <dd class="password">{{ form_widget(form.plainPassword, {attr:{class:'text', autocomplete:'off'}}) }}
-                {{ form_errors(form.plainPassword) }}</dd>
-            <dt>{{ form_label(form.profile.birthday, 'form.register.birthday'|trans) }}</dt>
-            <dd class="birthday">{{ form_widget(form.profile.birthday) }}
-                {{ form_errors(form.profile.birthday) }}</dd>
-            <dt>{{ form_label(form.name, 'form.register.name'|trans) }}</dt>
-            <dd class="name">{{ form_widget(form.name, {attr:{class:'text'}}) }}
-                {{ form_errors(form.name) }}</dd>
-            <dt>{{ form_label(form.profile.gender, 'form.register.gender.label'|trans) }}</dt>
-            <dd class="gender">{{ form_widget(form.profile.gender['0']) }}{{ form_label(form.profile.gender['0'], 'form.register.gender.male'|trans, {label_attr:{class:'male'}}) }}{{ form_widget(form.profile.gender['1']) }}{{ form_label(form.profile.gender['1'], 'form.register.gender.female'|trans, {label_attr:{class:'female'}}) }}
-                {{ form_errors(form.profile.gender) }}</dd>
-            <dt>{{ form_label(form.profile.city.fullName, 'form.register.city.label'|trans ) }}</dt>
-            <dd class="city">{{ form_widget(form.profile.city, {attr:{class:'text',placeholder:'form.register.city.placeholder'|trans,'data-country-code':geoip.country_code,'data-country-name':geoip.country_name,'data-continent-code':geoip.continent_code,'data-language':lunetics_getLocaleLanguage()}}) }}
-                {{ form_errors(form.profile.city) }}</dd>
-        </dl>
-        {{ form_rest(form) }}
-        {{ form_errors(form) }}
-        <button type="submit">{{ 'form.register.submit'|trans }}</button>
-    </form>
+    {{ form_row(form.email, {label:'form.register.email'|trans,attr:{class:'input-xlarge', autocomplete:'off'}})}}
+    {{ form_row(form.plainPassword, {label:'form.register.password'|trans({'%site_name%':site_name}), attr:{class:'input-xlarge'} }) }}
+    {{ form_row(form.profile.birthday, {label:'form.register.birthday'|trans}) }}
+    {{ form_row(form.name, {label:'form.register.name'|trans, attr:{class:'input-xlarge'} }) }}
+    {{ form_row(form.profile.gender, {label:'form.register.gender.label'|trans}) }}
+    {{ form_row(form.profile.city, {label:'form.register.city'|trans, attr:{class:'input-xlarge'} }) }}
 
-</div>
+    {{ form_rest(form) }}
+
+    <button type="submit" class="btn">{{ 'form.register.submit'|trans }}</button>
+</form>
