--- a/src/Kurumi/UserBundle/Resources/views/Register/register_page.html.twig
+++ b/src/Kurumi/UserBundle/Resources/views/Register/register_page.html.twig
@@ -13,8 +13,9 @@
       'bootstrap/js/bootstrap-typeahead.js'
       'bootstrap/js/bootstrap-dropdown.js'
       'bootstrap/js/bootstrap-button.js'
-      'js/jstz.min.js'
-      'js/front-page.js'
+      'bootstrap/js/bootstrap-modal.js'
+      '@BriareosAjaxBundle/Resources/public/js/jquery.form.js'
+      '@BriareosAjaxBundle/Resources/public/js/ajax.js'
       filter='?yui_js'
       output='js-compiled/register-page.js'
      %}
