--- a/src/Kurumi/UserBundle/Resources/views/Form/login_form.html.twig
+++ b/src/Kurumi/UserBundle/Resources/views/Form/login_form.html.twig
@@ -1,19 +1,19 @@
-<form id="user_login" action="{{ path('login_check') }}" method="post" class="login-form">
+<form id="user_login" action="{{ path('login_check') }}" method="post" class="login-form" data-ajax>
     <div class="row-fluid">
         <div class="span5">
             <label for="login-email" class="control-label">{{ 'form.login.email'|trans }}</label>
-            <input tabindex="1" id="login-email" type="email" class="input-block-level"  name="_username" required="required">
-            <label><input tabindex="3" type="checkbox" checked="checked" name="_remember_me"> {{ 'form.login.remember_me'|trans }}</label>
+            <input tabindex="1" id="login-email" type="email" class="input-block-level"  name="email" required="required">
+            <label><input tabindex="3" type="checkbox" checked="checked" name="remember_me"> {{ 'form.login.remember_me'|trans }}</label>
         </div>
         <div class="span4">
             <label for="login-password" class="control-label">{{ 'form.login.password'|trans }}</label>
-            <input tabindex="2" id="login-password" type="password" class="input-block-level" name="_password" required="required">
+            <input tabindex="2" id="login-password" type="password" class="input-block-level" name="password" required="required">
             <a tabindex="5" href="{{ path('login') }}">{{ 'form.login.forgot_password'|trans }}</a>
         </div>
         <div class="span3">
             <label>&nbsp</label>
-            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}"/>
-            <button tabindex="4" class="btn btn-primary input-block-level">{{ 'form.login.log_in'|trans }}</button>
+            <input type="hidden" name="_token" value="{{ csrf_token('authenticate') }}"/>
+            <button type="submit" tabindex="4" class="btn btn-primary input-block-level">{{ 'form.login.log_in'|trans }}</button>
         </div>
     </div>
 </form>
