--- a/src/Kurumi/UserBundle/Resources/views/Login/login.html.twig
+++ b/src/Kurumi/UserBundle/Resources/views/Login/login.html.twig
@@ -1,13 +1,15 @@
-{% extends '::login.html.twig' %}
+{% extends '::base.html.twig' %}
 
 {% block title %}Sign in to Kurumi{% endblock %}
 
 {% block body %}
+<div class="container">
 
-{% if error %}
-    <div>{{ error.message }}</div>
-{% endif %}
+    {% if error %}
+    <div class="alert alert-error">{{ error.message }}</div>
+    {% endif %}
 
-{% include 'UserBundle:Login:login_form.html.twig' %}
+    {% include 'UserBundle:Login:login_form.html.twig' %}
 
+</div>
 {% endblock %}
