--- a/src/Kurumi/UserBundle/Resources/views/Login/login_form.html.twig
+++ b/src/Kurumi/UserBundle/Resources/views/Login/login_form.html.twig
@@ -1,16 +1,30 @@
 <form action="{{ path("login_check") }}" method="post">
-    <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+    {% spaceless %}
+    <div class="control-group">
+        <label for="email" class="required control-label">{{ 'form.login.email'|trans }}</label>
 
-    <label for="email">{{ 'Your e-mail address'|trans }}:</label>
-    <input type="text" id="email" name="_username" value="{{ last_username }}" />
+        <div class=" controls">
+            <input type="text" id="email" name="email" required="required">
+        </div>
+    </div>
+    <div class="control-group">
+        <label for="password" class=" required control-label">{{ 'form.login.password'|trans }}</label>
 
-    <label for="password">{{ 'Password' }}</label>
-    <input type="password" id="password" name="_password" />
+        <div class="controls">
+            <input type="password" id="password" name="password" required="required">
+        </div>
+    </div>
+    <div class="control-group">
+        <div class="controls">
+            <label class="checkbox">
+                <input type="checkbox" id="remember_me" name="remember_me"
+                       class="" checked="checked"> {{ 'form.login.remember_me'|trans }}</label>
+        </div>
+    </div>
 
-    <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-    <label for="remember_me">{{ 'Remember me' }}</label>
+    <input type="hidden" id="_token" name="_token"
+           value="{{ csrf_token('authenticate') }}">
 
-
-
-    <input type="submit" id="_submit" name="_submit" value="{{ 'Log in' }}" />
+    <button class="btn" type="submit" id="_submit" name="_submit">{{ 'form.login.log_in'|trans }}</button>
+    {% endspaceless %}
 </form>
