Refactored a part of EditAccountController

--- a/src/Kurumi/PageBundle/Resources/views/Segment/navbar_top.html.twig
+++ b/src/Kurumi/PageBundle/Resources/views/Segment/navbar_top.html.twig
@@ -21,7 +21,7 @@
             </div>
             <div class="divider-vertical pull-right"></div>
             <p class="navbar-text pull-right">
-                <a href="{{ path('payment') }}" data-ajax class="label label-info">0 credits</a>
+                <a href="{{ path('payment') }}" data-ajax><span class="badge badge-info">0</span> credits</a>
             </p>
         </div>
     </div>
